syntax = "proto3";
option java_multiple_files = true;
package fpt.capstone.proto.contact;

message ContactDtoProto {
  int64 contactId = 1;
  int64 accountId = 2;
  string firstName = 3;
  string lastName =4;
  string middleName = 5;
  string title = 6;
  string email = 7;
  string phone = 8;
  string department = 9;
  string mobile = 10;
  string fax = 11;
  int32 isDelete = 12;
}

message GetContactRequest {
  int64 contactId = 1;
}
message GetContactResponse {
  ContactDtoProto response = 1;
}

service ContactService {
  rpc GetContact(GetContactRequest) returns (GetContactResponse) {};
}